k8s/book-store-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
      name: backend
