k8s/book-store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: book-store-ingress
  namespace: backend
spec:
  rules:
  - host: book-store.shahargn.com
    http:
      paths: 
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: book-store-internal-service
            port:
              number: 8000
